fogParser.cpp

// Generated from fog.g4 by ANTLR 4.10.1


#include "fogListener.h"

#include "fogParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct FogParserStaticData final {
  FogParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  FogParserStaticData(const FogParserStaticData&) = delete;
  FogParserStaticData(FogParserStaticData&&) = delete;
  FogParserStaticData& operator=(const FogParserStaticData&) = delete;
  FogParserStaticData& operator=(FogParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag fogParserOnceFlag;
FogParserStaticData *fogParserStaticData = nullptr;

void fogParserInitialize() {
  assert(fogParserStaticData == nullptr);
  auto staticData = std::make_unique<FogParserStaticData>(
    std::vector<std::string>{
      "chunk", "block", "stat", "laststat", "label", "namelist", "explist", 
      "exp", "prefixexp", "functioncall", "varOrExp", "var", "varSuffix", 
      "args", "funcbody", "operatorOr", "operatorAnd", "operatorComparison", 
      "operatorAddSub", "operatorMul", "operatorBitwise", "operatorUnary", 
      "operatorIncDec", "number", "type", "constant"
    },
    std::vector<std::string>{
      "", "';'", "'break'", "'goto'", "'while'", "'{'", "'}'", "'if'", "'} elseif'", 
      "'} else {'", "'for'", "'='", "','", "'inline {'", "'void'", "'return'", 
      "'continue'", "'label'", "':'", "'false'", "'true'", "'('", "')'", 
      "'['", "']'", "'or'", "'and'", "'<'", "'>'", "'<='", "'>='", "'!='", 
      "'=='", "'+'", "'-'", "'*'", "'&'", "'|'", "'^'", "'<<'", "'>>'", 
      "'!'", "'~'", "'++'", "'--'", "'i8'", "'i16'", "'i32'", "'byte'", 
      "'short'", "'long'", "'con'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "NAME", "INT", "HEX", "BINARY", "COMMENT", "LINE_COMMENT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  fogParserStaticData = staticData.release();
}

}

fogParser::fogParser(TokenStream *input) : fogParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

fogParser::fogParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  fogParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *fogParserStaticData->atn, fogParserStaticData->decisionToDFA, fogParserStaticData->sharedContextCache, options);
}

fogParser::~fogParser() {
  delete _interpreter;
}

const atn::ATN& fogParser::getATN() const {
  return *fogParserStaticData->atn;
}

std::string fogParser::getGrammarFileName() const {
  return "fog.g4";
}

const std::vector<std::string>& fogParser::getRuleNames() const {
  return fogParserStaticData->ruleNames;
}

const dfa::Vocabulary& fogParser::getVocabulary() const {
  return fogParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView fogParser::getSerializedATN() const {
  return fogParserStaticData->serializedATN;
}


//----------------- ChunkContext ------------------------------------------------------------------

fogParser::ChunkContext::ChunkContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fogParser::BlockContext* fogParser::ChunkContext::block() {
  return getRuleContext<fogParser::BlockContext>(0);
}

tree::TerminalNode* fogParser::ChunkContext::EOF() {
  return getToken(fogParser::EOF, 0);
}


size_t fogParser::ChunkContext::getRuleIndex() const {
  return fogParser::RuleChunk;
}

void fogParser::ChunkContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChunk(this);
}

void fogParser::ChunkContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChunk(this);
}

fogParser::ChunkContext* fogParser::chunk() {
  ChunkContext *_localctx = _tracker.createInstance<ChunkContext>(_ctx, getState());
  enterRule(_localctx, 0, fogParser::RuleChunk);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    block();
    setState(53);
    match(fogParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

fogParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<fogParser::StatContext *> fogParser::BlockContext::stat() {
  return getRuleContexts<fogParser::StatContext>();
}

fogParser::StatContext* fogParser::BlockContext::stat(size_t i) {
  return getRuleContext<fogParser::StatContext>(i);
}

fogParser::LaststatContext* fogParser::BlockContext::laststat() {
  return getRuleContext<fogParser::LaststatContext>(0);
}


size_t fogParser::BlockContext::getRuleIndex() const {
  return fogParser::RuleBlock;
}

void fogParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void fogParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

fogParser::BlockContext* fogParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 2, fogParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(58);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(55);
        stat(); 
      }
      setState(60);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(62);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << fogParser::T__1)
      | (1ULL << fogParser::T__14)
      | (1ULL << fogParser::T__15))) != 0)) {
      setState(61);
      laststat();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

fogParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fogParser::FunctioncallContext* fogParser::StatContext::functioncall() {
  return getRuleContext<fogParser::FunctioncallContext>(0);
}

fogParser::LabelContext* fogParser::StatContext::label() {
  return getRuleContext<fogParser::LabelContext>(0);
}

tree::TerminalNode* fogParser::StatContext::NAME() {
  return getToken(fogParser::NAME, 0);
}

std::vector<fogParser::ExpContext *> fogParser::StatContext::exp() {
  return getRuleContexts<fogParser::ExpContext>();
}

fogParser::ExpContext* fogParser::StatContext::exp(size_t i) {
  return getRuleContext<fogParser::ExpContext>(i);
}

std::vector<fogParser::BlockContext *> fogParser::StatContext::block() {
  return getRuleContexts<fogParser::BlockContext>();
}

fogParser::BlockContext* fogParser::StatContext::block(size_t i) {
  return getRuleContext<fogParser::BlockContext>(i);
}

fogParser::TypeContext* fogParser::StatContext::type() {
  return getRuleContext<fogParser::TypeContext>(0);
}

fogParser::FuncbodyContext* fogParser::StatContext::funcbody() {
  return getRuleContext<fogParser::FuncbodyContext>(0);
}

fogParser::ConstantContext* fogParser::StatContext::constant() {
  return getRuleContext<fogParser::ConstantContext>(0);
}


size_t fogParser::StatContext::getRuleIndex() const {
  return fogParser::RuleStat;
}

void fogParser::StatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStat(this);
}

void fogParser::StatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStat(this);
}

fogParser::StatContext* fogParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 4, fogParser::RuleStat);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(132);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(64);
      match(fogParser::T__0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(65);
      functioncall();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(66);
      label();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(67);
      match(fogParser::T__1);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(68);
      match(fogParser::T__2);
      setState(69);
      match(fogParser::NAME);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(70);
      match(fogParser::T__3);
      setState(71);
      exp(0);
      setState(72);
      match(fogParser::T__4);
      setState(73);
      block();
      setState(74);
      match(fogParser::T__5);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(76);
      match(fogParser::T__6);
      setState(77);
      exp(0);
      setState(78);
      match(fogParser::T__4);
      setState(79);
      block();
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == fogParser::T__7) {
        setState(80);
        match(fogParser::T__7);
        setState(81);
        exp(0);
        setState(82);
        match(fogParser::T__4);
        setState(83);
        block();
        setState(89);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(92);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == fogParser::T__8) {
        setState(90);
        match(fogParser::T__8);
        setState(91);
        block();
      }
      setState(94);
      match(fogParser::T__5);
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(96);
      match(fogParser::T__9);
      setState(97);
      type();
      setState(98);
      match(fogParser::NAME);
      setState(99);
      match(fogParser::T__10);
      setState(100);
      exp(0);
      setState(101);
      match(fogParser::T__11);
      setState(102);
      exp(0);
      setState(105);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == fogParser::T__11) {
        setState(103);
        match(fogParser::T__11);
        setState(104);
        exp(0);
      }
      setState(107);
      match(fogParser::T__4);
      setState(108);
      block();
      setState(109);
      match(fogParser::T__5);
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(111);
      match(fogParser::T__12);
      setState(112);
      block();
      setState(113);
      match(fogParser::T__5);
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(117);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case fogParser::T__44:
        case fogParser::T__45:
        case fogParser::T__46:
        case fogParser::T__47:
        case fogParser::T__48:
        case fogParser::T__49: {
          setState(115);
          type();
          break;
        }

        case fogParser::T__13: {
          setState(116);
          match(fogParser::T__13);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(119);
      match(fogParser::NAME);
      setState(120);
      funcbody();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(122);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == fogParser::T__50) {
        setState(121);
        constant();
      }
      setState(124);
      type();
      setState(125);
      match(fogParser::NAME);
      setState(126);
      match(fogParser::T__10);
      setState(127);
      exp(0);
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(129);
      match(fogParser::NAME);
      setState(130);
      match(fogParser::T__10);
      setState(131);
      exp(0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LaststatContext ------------------------------------------------------------------

fogParser::LaststatContext::LaststatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fogParser::ExpContext* fogParser::LaststatContext::exp() {
  return getRuleContext<fogParser::ExpContext>(0);
}


size_t fogParser::LaststatContext::getRuleIndex() const {
  return fogParser::RuleLaststat;
}

void fogParser::LaststatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLaststat(this);
}

void fogParser::LaststatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLaststat(this);
}

fogParser::LaststatContext* fogParser::laststat() {
  LaststatContext *_localctx = _tracker.createInstance<LaststatContext>(_ctx, getState());
  enterRule(_localctx, 6, fogParser::RuleLaststat);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(143);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case fogParser::T__14: {
        enterOuterAlt(_localctx, 1);
        setState(134);
        match(fogParser::T__14);
        setState(136);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << fogParser::T__18)
          | (1ULL << fogParser::T__19)
          | (1ULL << fogParser::T__20)
          | (1ULL << fogParser::T__33)
          | (1ULL << fogParser::T__40)
          | (1ULL << fogParser::T__41)
          | (1ULL << fogParser::T__42)
          | (1ULL << fogParser::T__43)
          | (1ULL << fogParser::NAME)
          | (1ULL << fogParser::INT)
          | (1ULL << fogParser::HEX)
          | (1ULL << fogParser::BINARY))) != 0)) {
          setState(135);
          exp(0);
        }
        break;
      }

      case fogParser::T__1: {
        enterOuterAlt(_localctx, 2);
        setState(138);
        match(fogParser::T__1);
        break;
      }

      case fogParser::T__15: {
        enterOuterAlt(_localctx, 3);
        setState(139);
        match(fogParser::T__15);
        setState(141);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == fogParser::T__0) {
          setState(140);
          match(fogParser::T__0);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LabelContext ------------------------------------------------------------------

fogParser::LabelContext::LabelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* fogParser::LabelContext::NAME() {
  return getToken(fogParser::NAME, 0);
}


size_t fogParser::LabelContext::getRuleIndex() const {
  return fogParser::RuleLabel;
}

void fogParser::LabelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLabel(this);
}

void fogParser::LabelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLabel(this);
}

fogParser::LabelContext* fogParser::label() {
  LabelContext *_localctx = _tracker.createInstance<LabelContext>(_ctx, getState());
  enterRule(_localctx, 8, fogParser::RuleLabel);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(145);
    match(fogParser::T__16);
    setState(146);
    match(fogParser::NAME);
    setState(147);
    match(fogParser::T__17);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NamelistContext ------------------------------------------------------------------

fogParser::NamelistContext::NamelistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<fogParser::TypeContext *> fogParser::NamelistContext::type() {
  return getRuleContexts<fogParser::TypeContext>();
}

fogParser::TypeContext* fogParser::NamelistContext::type(size_t i) {
  return getRuleContext<fogParser::TypeContext>(i);
}

std::vector<tree::TerminalNode *> fogParser::NamelistContext::NAME() {
  return getTokens(fogParser::NAME);
}

tree::TerminalNode* fogParser::NamelistContext::NAME(size_t i) {
  return getToken(fogParser::NAME, i);
}


size_t fogParser::NamelistContext::getRuleIndex() const {
  return fogParser::RuleNamelist;
}

void fogParser::NamelistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNamelist(this);
}

void fogParser::NamelistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNamelist(this);
}

fogParser::NamelistContext* fogParser::namelist() {
  NamelistContext *_localctx = _tracker.createInstance<NamelistContext>(_ctx, getState());
  enterRule(_localctx, 10, fogParser::RuleNamelist);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(149);
    type();
    setState(150);
    match(fogParser::NAME);
    setState(157);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == fogParser::T__11) {
      setState(151);
      match(fogParser::T__11);
      setState(152);
      type();
      setState(153);
      match(fogParser::NAME);
      setState(159);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExplistContext ------------------------------------------------------------------

fogParser::ExplistContext::ExplistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<fogParser::ExpContext *> fogParser::ExplistContext::exp() {
  return getRuleContexts<fogParser::ExpContext>();
}

fogParser::ExpContext* fogParser::ExplistContext::exp(size_t i) {
  return getRuleContext<fogParser::ExpContext>(i);
}


size_t fogParser::ExplistContext::getRuleIndex() const {
  return fogParser::RuleExplist;
}

void fogParser::ExplistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExplist(this);
}

void fogParser::ExplistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExplist(this);
}

fogParser::ExplistContext* fogParser::explist() {
  ExplistContext *_localctx = _tracker.createInstance<ExplistContext>(_ctx, getState());
  enterRule(_localctx, 12, fogParser::RuleExplist);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(165);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(160);
        exp(0);
        setState(161);
        match(fogParser::T__11); 
      }
      setState(167);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
    }
    setState(168);
    exp(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpContext ------------------------------------------------------------------

fogParser::ExpContext::ExpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fogParser::NumberContext* fogParser::ExpContext::number() {
  return getRuleContext<fogParser::NumberContext>(0);
}

fogParser::PrefixexpContext* fogParser::ExpContext::prefixexp() {
  return getRuleContext<fogParser::PrefixexpContext>(0);
}

fogParser::OperatorUnaryContext* fogParser::ExpContext::operatorUnary() {
  return getRuleContext<fogParser::OperatorUnaryContext>(0);
}

std::vector<fogParser::ExpContext *> fogParser::ExpContext::exp() {
  return getRuleContexts<fogParser::ExpContext>();
}

fogParser::ExpContext* fogParser::ExpContext::exp(size_t i) {
  return getRuleContext<fogParser::ExpContext>(i);
}

fogParser::OperatorIncDecContext* fogParser::ExpContext::operatorIncDec() {
  return getRuleContext<fogParser::OperatorIncDecContext>(0);
}

fogParser::OperatorOrContext* fogParser::ExpContext::operatorOr() {
  return getRuleContext<fogParser::OperatorOrContext>(0);
}

fogParser::OperatorAndContext* fogParser::ExpContext::operatorAnd() {
  return getRuleContext<fogParser::OperatorAndContext>(0);
}

fogParser::OperatorComparisonContext* fogParser::ExpContext::operatorComparison() {
  return getRuleContext<fogParser::OperatorComparisonContext>(0);
}

fogParser::OperatorBitwiseContext* fogParser::ExpContext::operatorBitwise() {
  return getRuleContext<fogParser::OperatorBitwiseContext>(0);
}

fogParser::OperatorAddSubContext* fogParser::ExpContext::operatorAddSub() {
  return getRuleContext<fogParser::OperatorAddSubContext>(0);
}

fogParser::OperatorMulContext* fogParser::ExpContext::operatorMul() {
  return getRuleContext<fogParser::OperatorMulContext>(0);
}


size_t fogParser::ExpContext::getRuleIndex() const {
  return fogParser::RuleExp;
}

void fogParser::ExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExp(this);
}

void fogParser::ExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fogListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExp(this);
}


fogParser::ExpContext* fogParser::exp() {
   return exp(0);
}

fogParser::ExpContext* fogParser::exp(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  fogParser::ExpContext *_localctx = _tracker.createInstance<ExpContext>(_ctx, parentState);
  fogParser::ExpContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 14;
  enterRecursionRule(_localctx, 14, fogParser::RuleExp, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(181);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case fogParser::T__18: {
        setState(171);
        match(fogParser::T__18);
        break;
      }

      case fogParser::T__19: {
        setState(172);
        match(fogParser::T__19);
        break;
      }

      case fogParser::INT:
      case fogParser::HEX:
      case fogParser::BINARY: {
        setState(173);
        number();
        break;
      }

      case fogParser::T__20:
      case fogParser::NAME: {
        setState(174);
        prefixexp();
        break;
      }

      case fogParser::T__33:
      case fogParser::T__40:
      case fogParser::T__41: {
        setState(175);
        operatorUnary();
        setState(176);
        exp(3);
        break;
      }

      case fogParser::T__42:
      case fogParser::T__43: {
        setState(178);
        operatorIncDec();
        setState(179);
        exp(2);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(211);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(209);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExpContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExp);
          setState(183);

          if (!(precpred(_ctx, 9))) throw FailedPredicateException(this, "precpred(_ctx, 9)");
          setState(184);
          operatorOr();
          setState(185);
          exp(10);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExpContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExp);
          setState(187);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(188);
          operatorAnd();
          setState(189);
          exp(9);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExpContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExp);
          setState(191);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(192);
          operatorComparison();
          setState(193);
          exp(8);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExpContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExp);
          setState(195);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(196);
          operatorBitwise();
          setState(197);
          exp(7);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<ExpContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExp);
          setState(199);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(200);
          operatorAddSub();
          setState(201);
          exp(6);
          break;
        }

        case 6: {
          _localctx = _tracker.createInstance<ExpContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExp);
          setState(203);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(204);
          operatorMul();
          setState(205);
          exp(5);
          break;
        }

        case 7: {
          _localctx = _tracker.createInstance<ExpContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExp);
          setState(207);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(208);
          operatorIncDec();
          break;
        }
